--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
             <version>2.30.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.yandex.qatools.ashot</groupId>
+            <artifactId>ashot</artifactId>
+            <version>1.5.4</version>
+        </dependency>
 
     </dependencies>
 
